# ObjFW

./: .gitignore
src/: OFAtomic.h  OFObject.h  OFObject.m  OFString.h  macros.h  meson.build  objfw-defs.h
src/runtime/: autorelease.m  category.m  class.m  dtable.m  exception.m  hashtable.m  lookup.m  meson.build  misc.m  property.m  protocol.m  selector.m  sparsearray.m  static-instances.m  synchronized.m
